<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.cps.views.profile.ProfileViewModel"/>
        <variable
            name="pass"
            type="com.cps.models.requests.SendEditPass"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pass"
        android:background="@color/base"
        android:padding="10dp"
        android:gravity="center"
        style="@style/TextWBBS" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutBaseColor"
        android:hint="@string/old_pass"
        app:errorEnabled="true"
        errorNull="@{pass.oldPassword}"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={pass.oldPassword}"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutBaseColor"
        android:hint="@string/new_pass"
        app:errorEnabled="true"
        errorNull="@{pass.newPassword}"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={pass.newPassword}"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:backgroundTint="@color/base"
        android:layout_gravity="center"/>
    </LinearLayout>

    </RelativeLayout>
</layout>