<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="admission"
            type="com.cps.models.requests.SendAdmission" />
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/base2"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_title"
                style="@style/TextWBBS"
                android:padding="5dp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_stu_emergency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"
            app:errorEnabled="true"
            errorNull="@{admission.stuEmergName}"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={admission.stuEmergName}"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_stu_emergency_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/stu_relation"
            app:errorEnabled="true"
            errorNull="@{admission.stuEmergRelation}">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={admission.stuEmergRelation}"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_stu_emergency_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone"
            app:errorEnabled="true"
            errorNull="@{admission.stuEmergPhone}"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={admission.stuEmergPhone}"
                android:inputType="number"
                android:maxLength="11"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/base2"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_title"
                style="@style/TextWBBS"
                android:padding="5dp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_stu_medical_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/stu_medical"
            app:errorEnabled="true"
            errorNull="@{admission.stuMedicalInfo}"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={admission.stuMedicalInfo}"
                android:lines="5"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/base2"
            app:cardCornerRadius="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/declaration_title"
                style="@style/TextWBBS"
                android:padding="5dp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_declaration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/declaration_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_declaration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:checked="true"
                android:buttonTint="@color/base2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>